# monocurl

./: .gitignore  Cargo.toml  FILE STRUCTURE.md  LICENSE.md  Monocurl AI Context.md  Monocurl Language.md  Overview.md  Plan.md  README.md  Syntax.md  monocurl.sln
.cargo/: config.toml
Monocurl.xcodeproj/: project.pbxproj
Monocurl.xcodeproj/xcshareddata/xcschemes/: monocurl.xcscheme
assets/AppIcon.appiconset/: Contents.json
assets/default_scenes/: (Example) 3D Camera Animation.mcs  (Example) Algorithm.mcs  (Example) Flow Field.mcs  (Example) Fractal.mcs  (Example) Geometry Proof.mcs  (Example) Image.mcs  (Example) Riemann Sum.mcs  (Example) Text.mcs  (Tutorial) Animations.mcs  (Tutorial) Language Basics.mcs  (Tutorial) Meshes.mcs  (Tutorial) Monocurl Overview.mcs  animations.mcs  example_3d_surface.mcs  example_algorithms_binary_search.mcs  example_algorithms_wavefront_pathfinding.mcs  example_camera_animations.mcs  example_geometry_proof.mcs  example_graphing_riemann_sums.mcs  example_image_mandala.mcs  example_recursive_mesh_tree.mcs  example_text_and_equations.mcs  graph.mcs  language_basics.mcs  meshes_and_operators.mcs  parameters.mcs  shapes.mcs  welcome_to_monocurl.mcs
assets/img/timeline/: LICENSE.tabler-icons.txt
assets/monocurl-mcp/docs/: ai-overview.md  animations.md  cheat-sheet.md  debugging-patterns.md  language-basics.md  language-semantics.md  meshes-and-operators.md  params-camera-background.md  riemann-rectangles.mcs  std  stdlib.md
assets/std/std/: anim.mcl  color.mcl  math.mcl  mesh.mcl  scene.mcl  util.mcl
assets/tectonic/: README.md
crates/autocomplete/: Cargo.toml
crates/autocomplete/src/: lib.rs
crates/bytecode/: Cargo.toml
crates/bytecode/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: command.rs  execute.rs  help.rs  lib.rs  main.rs  parse.rs  progress.rs  style_trusted_html.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: bytecode.rs  cache.rs  compiler.rs  lib.rs
crates/executor/: Cargo.toml
crates/executor/src/: camera.rs  error.rs  executor.rs  heap.rs  lib.rs  scene_snapshot.rs  state.rs  time.rs  transcript.rs  value.rs  vheap.rs
crates/exporter/: Cargo.toml
crates/exporter/src/: lib.rs
crates/geo/: Cargo.toml
crates/geo/src/: lib.rs  mesh.rs  mesh_build.rs  mesh_set.rs  simd.rs  util.rs
crates/integration_tests/: Cargo.toml
crates/integration_tests/src/: lib.rs
crates/integration_tests/tests/: anim_tests.rs  basic_executor_tests.rs  stateful_tests.rs
crates/integration_tests/tests/anim_tests/: errors.rs  multislide.rs  regressions.rs  state_vars.rs  sync.rs  timing.rs
crates/integration_tests/tests/basic_executor_tests/: arithmetic.rs  collections.rs  control_flow.rs  heap.rs  lambdas.rs  live_values.rs  operators.rs  references.rs  transcript.rs  validation.rs
crates/latex/: Cargo.toml
crates/latex/src/: cache.rs  config.rs  document.rs  lib.rs  number.rs  render.rs  svg.rs  system.rs  tectonic.rs  types.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lexer.rs  lib.rs  stateful_lexer.rs  token.rs
crates/libtess2/: Cargo.toml  README.md  build.rs
crates/libtess2/src/: lib.rs
crates/mathjax_svg/: Cargo.toml
crates/mathjax_svg/src/: lib.rs
crates/mc_autocomplete/: Cargo.toml
crates/mc_compiler/: Cargo.toml
crates/mc_executor/: Cargo.toml
crates/mc_exporter/: Cargo.toml
crates/mc_geo/: Cargo.toml
crates/mc_lexer/: Cargo.toml
crates/mc_parser/: Cargo.toml
crates/mc_renderer/: Cargo.toml
crates/mc_server/: Cargo.toml
crates/mc_server/src/: lib.rs  server.rs  state.rs
crates/mc_stdlib/: Cargo.toml
crates/mc_ui/: Cargo.toml
crates/mc_ui/src/: home.rs  home_window.rs  lib.rs  menu.rs  project_window.rs  theme.rs
crates/mc_util/: Cargo.toml
crates/mcp/: Cargo.toml  README.md  server.github.example.json
crates/mcp/docs/: cheat-sheet.md  cli.md  debugging-patterns.md  language-basics.md  language-semantics.md  params-camera-background.md  stdlib.md
crates/mcp/src/: main.rs
crates/monocurl/: Cargo.toml
crates/monocurl-mcp/: server.github.example.json
crates/monocurl-mcp/docs/: language-semantics.md  meshes-and-operators.md
crates/monocurl/src/: actions.rs  app_menu_bar.rs  home_view.rs  main.rs  settings_window.rs  theme.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  lib.rs  (+3 more)
crates/renderer/: Cargo.toml
crates/renderer/src/: blade.rs  blade.wgsl  lib.rs  software.rs
crates/renderer/src/blade/: geometry.rs  mod.rs  pipelines.rs  renderer.rs  resources.rs  types.rs
crates/server/: Cargo.toml
crates/stdlib/: Cargo.toml
crates/stdlib-macros/: Cargo.toml
crates/structs/: Cargo.toml
crates/ui/: Cargo.toml
crates/ui/src/: actions.rs  app_menu_bar.rs  document.rs  document_state.rs  document_view.rs  editor.rs  home.rs  home_view.rs  lib.rs  main.rs  navbar.rs  navbar_view.rs  settings_window.rs  state.rs  theme.rs  window.rs
crates/ui/src/components/: buttons.rs  latex_warning.rs  mod.rs  split_pane.rs
crates/ui/src/document_view/: actions.rs  export.rs  mod.rs  render.rs
crates/ui/src/editor/: backing.rs  editor_ui.rs  editor_view.rs  line_map.rs  line_shaper.rs  mod.rs  text_editor.rs  wrapped_line.rs
crates/ui/src/editor/text_editor/: clipboard.rs  hover.rs  input_handler.rs  mod.rs  popover_element.rs  text_element.rs
crates/ui/src/services/: compilation.rs  execution.rs  lexing.rs  mod.rs
crates/ui/src/services/execution/: diagnostics.rs  loop_state.rs  snapshot.rs
crates/ui/src/state/: diagnostics.rs  document_state.rs  execution_state.rs  mod.rs  textual_state.rs  window_state.rs
crates/ui/src/timeline/: icons.rs  metrics.rs  mod.rs  timeline_ui.rs  timeline_view.rs  toolbar.rs  track.rs
crates/ui/src/viewport/: debug_scene_view.rs  mod.rs  scene_renderer.rs  viewport_view.rs
crates/ui/src/viewport/viewport_view/: camera.rs  params.rs  render.rs  style.rs
crates/ui_cli_shared/: Cargo.toml
monocurl/cengine/: .clang-format  cengine.vcxproj
monocurl_tests/cengine/: cengine_tests.c  cengine_tests.h  monocurl_tests_util.c  monocurl_tests_util.h
monocurl_ui_tests/: MonocurlUITests.swift
(+361 files in other folders)
