[workspace]
resolver = "2"

members = [
    "crates/autocomplete",
    "crates/bytecode",
    "crates/cli",
    "crates/compiler",
    "crates/ui_cli_shared",
    "crates/executor",
    "crates/exporter",
    "crates/geo",
    "crates/lexer",
    "crates/parser",
    "crates/renderer",
    "crates/stdlib",
    "crates/stdlib-macros",
    "crates/structs",
    "crates/ui",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.86"
log = "0.4.25"
env_logger = "0.11"
arrayvec = "0.7.6"
arraydeque = "0.5.1"
smallvec = "1.15.1"
unicode-segmentation = "1.12.0"
open = "5.3.2"
dirs = "5.0.0"
serde = "1.0.228"
serde_json = "1.0.145"
schemars = "1.0.4"
uuid = "1.18.1"
futures = "0.3.31"
smol = "2.0.2"
itertools = "0.14.0"
wide = "0.7"

gpui = { path = "../gpui/crates/gpui" }

autocomplete = { path = "crates/autocomplete" }
bytecode = { path = "crates/bytecode" }
cli = { path = "crates/cli" }
compiler = { path = "crates/compiler" }
executor = { path = "crates/executor" }
exporter = { path = "crates/exporter" }
geo = { path = "crates/geo" }
lexer = { path = "crates/lexer" }
parser = { path = "crates/parser" }
renderer = { path = "crates/renderer" }
inventory = "0.3"
stdlib-macros = { path = "crates/stdlib-macros" }
stdlib = { path = "crates/stdlib" }
structs = { path = "crates/structs" }
ui = { path = "crates/ui" }
ui_cli_shared = { path = "crates/ui_cli_shared" }
