[workspace]
resolver = "2"

members = [
    "crates/bytecode",
    "crates/cli",
    "crates/compiler",
    "crates/integration_tests",
    "crates/latex",
    "crates/ui_cli_shared",
    "crates/executor",
    "crates/exporter",
    "crates/geo",
    "crates/libtess2",
    "crates/mcp",
    "crates/lexer",
    "crates/parser",
    "crates/renderer",
    "crates/stdlib",
    "crates/stdlib-macros",
    "crates/structs",
    "crates/monocurl",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.86"
log = "0.4.25"
env_logger = "0.11"
arrayvec = "0.7.6"
arraydeque = "0.5.1"
smallvec = "1.15.1"
unicode-segmentation = "1.12.0"
open = "5.3.2"
dirs = "5.0.0"
serde = "1.0.228"
serde_json = "1.0.145"
schemars = "1.0.4"
sha2 = "0.10.9"
futures = "0.3.31"
smol = "2.0.2"
notify-debouncer-full = "0.7.0"
itertools = "0.14.0"
wide = "0.7"
cc = "1.2.41"
tiny-skia-path = "0.11.4"
usvg = "0.45.1"
image = "0.25.5"
mp4 = "0.14.0"
openh264 = "0.9.3"
hayro-interpret = "0.4.0"
hayro-svg = "0.2.0"
roxmltree = "0.20.0"
tectonic = { version = "0.16.9", default-features = false, features = ["geturl-reqwest"] }
tectonic_bundles = { version = "0.4.1", default-features = false }
# keep xetex on the last engine that works with tectonic_xetex_layout 0.2.x;
# layout 0.3.x conflicts with gpui's fontconfig stack.
tectonic_engine_xetex = "=0.4.4"

gpui = "0.2.2"

autocomplete = { path = "crates/autocomplete" }
bytecode = { path = "crates/bytecode" }
cli = { path = "crates/cli" }
compiler = { path = "crates/compiler" }
executor = { path = "crates/executor" }
exporter = { path = "crates/exporter" }
geo = { path = "crates/geo" }
latex = { path = "crates/latex" }
lexer = { path = "crates/lexer" }
libtess2 = { path = "crates/libtess2" }
mcp = { path = "crates/mcp" }
parser = { path = "crates/parser" }
renderer = { path = "crates/renderer" }
inventory = "0.3"
stdlib-macros = { path = "crates/stdlib-macros" }
stdlib = { path = "crates/stdlib" }
structs = { path = "crates/structs" }
monocurl = { path = "crates/monocurl" }
ui_cli_shared = { path = "crates/ui_cli_shared" }

[profile.release]
lto = true
