[package]
name = "monocurl-mcp"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "monocurl-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
rmcp = { version = "1.5.0", features = ["server", "transport-io"] }
serde_json.workspace = true
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
