[package]
name = "ui"
version = "0.1.0"
edition.workspace = true

[dependencies]
ui_cli_shared.workspace = true
lexer.workspace = true
structs.workspace = true

anyhow.workspace = true
smallvec.workspace = true
log.workspace = true
env_logger.workspace = true
gpui.workspace = true
unicode-segmentation.workspace = true
open.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
uuid.workspace = true
futures.workspace = true
smol.workspace = true
